2004-10-24  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/Makefile.am
	* app/dialogs/vectors-export-dialog.[ch]
	* app/dialogs/vectors-import-dialog.[ch]: new files.

	* app/actions/vectors-commands.c: use the new dialogs and remember
	their last values.

2004-10-23  Sven Neumann  <sven@gimp.org>

	* app/actions/vectors-commands.c: added missing controls to the
	path import and export dialogs.

2004-10-23  DindinX  <dindinx@gimp.org>

	* plug-ins/common/newsprint.c: cleaned it up, fixed a (documented)
	memory leak and the weird behaviour of the resolution scales.

2004-10-23  DindinX  <dindinx@gimp.org>

	* plug-ins/common/newsprint.c: added a preview.

2004-10-23  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpaspectpreview.h
	* libgimp/gimpdrawablepreview.h
	* libgimp/gimpprogressbar.h
	* libgimpwidgets/gimpcellrenderercolor.h
	* libgimpwidgets/gimpcellrenderertoggle.h
	* libgimpwidgets/gimpframe.h
	* libgimpwidgets/gimpintcombobox.h
	* libgimpwidgets/gimpintstore.h
	* libgimpwidgets/gimppreview.h
	* libgimpwidgets/gimppreviewarea.h
	* libgimpwidgets/gimpscrolledpreview.h: added padding to all class
	structs which have been added since 2.0.

2004-10-23  Michael Natterer  <mitch@gimp.org>

	* app/actions/file-commands.c (file_save_cmd_callback): don't
	g_return_if_fail() if there is no active drawable, just silently
	return.

	* app/actions/image-commands.c: remember the last merge_type of
	the "Merge Visible Layers" dialog.

	* app/actions/layers-commands.c: remeber the last values of the
	"Add Layer Mask" dialog.

	* app/actions/select-commands.c: renamed a bunch of static
	variables to be consistent with other variables used to remember
	dialog values.

	* app/actions/view-commands.c (view_fullscreen_cmd_callback): it's
	useless to update the "view-fullscreen" actions here because the
	"fullscreen" state of the shell changes asynchronously

2004-10-23  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/image-merge-layers-dialog.c